tests/errors/validation/op-inside-function.fn
---
Description: Operator declared inside a function body
Expected: FN2002
---

type NestTest
{
    fn Outer
    {
        op +(a: i32, b: i32) -> i32
        {
            return a + b
        }
    }
}

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
